Fixing and issue with scrollbars

--- a/src/themes/bsb2021/static/css/site.css
+++ b/src/themes/bsb2021/static/css/site.css
@@ -109,7 +109,7 @@ body {
 .mailbox-header {
     background: rgb(153,153,153);
     background: linear-gradient(0deg,#909ebc 0%,#748aad 30%,#748aad 70%,#909ebc 100%);
-    height:  8vh;
+    height:  50px;
     width: 100%;
 }
 
@@ -127,7 +127,7 @@ body {
 
 .mailbox-folders {
     background-color: white;
-    height: 95vh;
+    height: 80vh;
 }
 
 .mailfolders {
@@ -135,7 +135,8 @@ body {
     margin: 4px;
     border-right: lightgray 2px solid;
     border-top: lightgray 2px solid;
-    height: 95vh;
+    height: 85vh;
+    border-bottom: 2px solid lightgray;
 }
 
 .mailbox-messages {
@@ -224,7 +225,7 @@ a.jstree-anchor {
 .maillist_container {
     padding-top: 10px;
     border: 1px solid #ddd;
-    height: 90vh;
+    height: 80vh;
     float: left;
     width: 100%;
 }
@@ -287,8 +288,11 @@ hr.maildivider {
     display: table;
 }
 
-.mailmessage {
+div.mailmessage {
     width: auto;
+    overflow-y: scroll;
+    height: 83vh;
+    border: 2px solid lightgray;
 }
 
 .mail {
@@ -296,10 +300,9 @@ hr.maildivider {
     padding: 10px;
     width: 100vw;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    overflow: scroll;
-    overflow-y: scroll;
-    height: 90vh;
+ 
 }
+
 .mailheader .subject {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: larger;
